Fixed the overflow of the code block in the nineties theme

--- a/themes/nineties/css/main.css
+++ b/themes/nineties/css/main.css
@@ -12,6 +12,7 @@ p code {
 .code-block {
 	background-color: lightgray;
 	padding: 10px 15px;
+	overflow: auto;
 }
 
 .badge {
